CHANGES
=======

* executing yapf and codestyle
* prepare an env for python3
* add documentation

0.1.0
-----

* enabling flake8 and release 0.1.0
* update README
* update req
* unit test pass
* first version (unit test fails)
* skip pypy
* enable coveralls
* fix tox for each conf in travis
* enable travis build
* initial commit