@@ -7,7 +7,6 @@ python:
     - 3.4
     - 2.7
 
-
 env:
   matrix:
   - TWISTED=15.5.0
@@ -17,14 +16,14 @@ env:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 install:
     - pip install -U pip
-    - pip install -U -r requirements.txt -r requirements-dev .
+    - pip install -U -r requirements.txt -r requirements-dev.txt .
     - |
         set -e
         [ $TWISTED = latest ] || pip install Twisted==$TWISTED
     - pip install -U tox coveralls
 
-# command to run tests, e.g. python setup.py test
-script: tox -e ${TOXENV}
+# command to run tests
+script: python setup.py test
 
 after_success:
     "coveralls"
